# Racing

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml
doc/: Доклад.docx  Реферат.docx  СОГЛАСИЕ НА ПУБЛИКАЦИЮ .docx  Требования.docx
screens/: субтитры.srt
src/: button.qml  car.cpp  car.h  game.cpp  game.h  gamescene.cpp  gamescene.h  generalwindows.cpp  generalwindows.h  generalwindows.ui  main.cpp  main.qml  recource.qrc
